syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

package imCore.service.v1;


option go_package = "api";

option (gogoproto.goproto_getters_all) = false;


message ConnectReq{
    string server = 1 [(gogoproto.moretags) = 'validate:"required"'];
    // the jwt include uid, device id
    string jwt = 2;
}

message ConnectResp{
    int64 uid  = 1;
    string device_id = 2;
    string token_id  = 3;
}


service imCore {
    rpc Connect(ConnectReq)returns(ConnectResp);
}
